# PdfPageManipulator

./: .gitignore  LICENSE  README.md  cleanup_tests.sh  cleanuptest.sh  install_toolchain.sh  pyproject.toml  run_tests.sh  runtests.sh
examples/: README.md  add_blank_after.py  add_blank_at.py  cleanup.sh  extract_even_odd_and_save.py  extract_evens.py  extract_odds.py  extract_pages.py  extract_range.py  insert_blank_first.py  insert_blank_last.py  install.sh  remove_first_page.py  remove_last_page.py  run.sh
src/PdfPageManipulator_vheidari/: PdfPageManipulator.py  __init__.py
src/pdf_page_manipulator/: PdfPageManipulator.py  __init__.py
tests/: testPdfPageManipulator.py  test_PdfPageManipulator.py
